TU-25: Added tests related to events use cases, fixed found bugs
