# src/controllers/event/dto/CreateEventRequest.dto.ts
@@ -1,4 +1,27 @@
-import { IsDateString, IsNotEmpty, IsNumber, IsString, Max, Min } from 'class-validator';
+import {
+  IsDateString,
+  IsDefined,
+  IsLatitude,
+  IsLongitude,
+  IsNotEmpty,
+  IsNotEmptyObject,
+  IsNumber,
+  IsString,
+  Max,
+  Min,
+  ValidateNested
+} from 'class-validator';
+import { Type } from 'class-transformer';
+
+class LocationDto {
+  @IsLongitude()
+  @IsNotEmpty()
+  lng!: number;
+
+  @IsLatitude()
+  @IsNotEmpty()
+  lat!: number;
+}
 
 class CreateEventRequest {
   @IsNumber()
@@ -9,13 +32,19 @@ class CreateEventRequest {
   @Max(1000)
   maxPlayers!: number;
 
-  @IsString()
-  @IsNotEmpty()
-  location!: string;
+  @IsDefined()
+  @IsNotEmptyObject()
+  @ValidateNested()
+  @Type(() => LocationDto)
+  location!: LocationDto;
 
   @IsDateString()
   @IsNotEmpty()
   startDate!: string;
+
+  @IsString()
+  @IsNotEmpty()
+  description!: string;
 }
 
 export default CreateEventRequest;
